[package]
name = "polkadot-network"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot-specific networking protocol"
edition = "2018"

[dependencies]
arrayvec = "0.4.12"
bytes = "0.5"
parking_lot = "0.9.0"
derive_more = "0.14.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
polkadot-validation = { path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sc-network = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-network-gossip = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
futures = "0.3.5"
log = "0.4.8"
exit-future = "0.2.0"
futures-timer = "2.0"
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
wasm-timer = "0.2.4"
rand = "0.7.3"

[dev-dependencies]
sp-keyring = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-state-machine = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
