[package]
name = "polkadot-primitives"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.3.4", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "sp-core", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
inherents = { package = "sp-inherents", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
application-crypto = { package = "sp-application-crypto", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-version = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-std = { package = "sp-std", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-staking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-arithmetic = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
runtime_primitives = { package = "sp-runtime", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
trie = { package = "sp-trie", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
frame-system = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }

[dev-dependencies]
sp-serializer = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
pretty_assertions = "0.5.1"

[features]
default = ["std"]
std = [
	"application-crypto/std",
	"parity-scale-codec/std",
	"primitives/std",
	"inherents/std",
	"trie/std",
	"sp-api/std",
	"sp-std/std",
	"sp-version/std",
	"sp-staking/std",
	"sp-arithmetic/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"bitvec/std",
	"frame-system/std",
]
