[package]
name = "polkadot-rpc"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"}
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"}
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"}
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
