[package]
name = "polkadot-rpc"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"  }
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"  }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"  }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"  }
sp-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"  }
sp-consensus-babe = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"  }
sc-rpc = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-consensus-babe = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"}
sc-consensus-babe-rpc = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"}
sc-consensus-epochs = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"}
sc-finality-grandpa = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-finality-grandpa-rpc = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-keystore = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"}
txpool-api = { package = "sp-transaction-pool", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch"  }
pallet-transaction-payment-rpc = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
