[package]
name = "polkadot-rpc"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"}
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"}
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"}
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
