[package]
name = "polkadot-service"
version = "0.7.29-pre1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store", optional = true }
consensus = { package = "polkadot-validation", path = "../validation", optional = true }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
polkadot-network = { path = "../network", optional = true }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-client = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
codec = { package = "parity-scale-codec", version = "1.3.0" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }

[features]
default = ["rocksdb", "full-node"]
rocksdb = ["service/rocksdb"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks"]
full-node = ["av_store", "consensus", "polkadot-network"]
