[package]
name = "polkadot-service"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store", optional = true }
consensus = { package = "polkadot-validation", path = "../validation", optional = true }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
westend-runtime = { path = "../runtime/westend" }
rococo-runtime = { path = "../runtime/rococo" }
polkadot-network = { path = "../network", optional = true }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
codec = { package = "parity-scale-codec", version = "1.3.4" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
env_logger = "0.7.0"

[features]
default = ["db", "full-node"]
db = ["service/db"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks", "westend-runtime/runtime-benchmarks"]
full-node = ["av_store", "consensus", "polkadot-network"]
