[package]
name = "polkadot-validation"
version = "0.7.32"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-timer = "2.0"
parking_lot = "0.9.0"
tokio = { version = "0.2.13", features = ["rt-core", "blocking"] }
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
inherents = { package = "sp-inherents", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
consensus = { package = "sp-consensus", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
primitives = { package = "sp-core", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sp-blockchain = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sp-api = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sc-client-api = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sp-timestamp = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
block-builder = { package = "sc-block-builder", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
trie = { package = "sp-trie", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
runtime_babe = { package = "pallet-babe", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
keystore = { package = "sc-keystore", git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
