[package]
name = "polkadot-validation"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.4"
futures-timer = "2.0"
parking_lot = "0.9.0"
tokio = { version = "0.2.13", features = ["rt-core", "blocking"] }
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
consensus = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
block-builder = { package = "sc-block-builder", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
keystore = { package = "sc-keystore", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "ashley-bitswap" }
