[package]
name = "polkadot-validation"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.4"
futures-timer = "2.0"
parking_lot = "0.9.0"
tokio = { version = "0.2.13", features = ["rt-core", "blocking"] }
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "sc-finality-grandpa", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
inherents = { package = "sp-inherents", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
consensus = { package = "sp-consensus", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
primitives = { package = "sp-core", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
txpool-api = { package = "sp-transaction-pool", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-timestamp = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
block-builder = { package = "sc-block-builder", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
trie = { package = "sp-trie", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
runtime_primitives = { package = "sp-runtime", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
runtime_babe = { package = "pallet-babe", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
babe-primitives = { package = "sp-consensus-babe", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
keystore = { package = "sc-keystore", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-basic-authorship = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }

[dev-dependencies]
sp-keyring = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
