[package]
name = "polkadot-network-test"
version = "0.8.22"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-network = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-service = { git = "file:///home/cecile/repos/substrate", features = ["test-helpers"], branch = "rococo-branch" }
sc-network-test = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-block-builder = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
