[package]
name = "polkadot-network-test"
version = "0.8.22"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"], branch = "cecton-fix-int-test-again" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
