[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4"
log = "0.4.8"
rand = "0.7.3"
tempfile = "3.1.0"

# Polkadot dependencies
av_store = { package = "polkadot-availability-store", path = "../../availability-store" }
consensus = { package = "polkadot-validation", path = "../../validation" }
polkadot-network = { path = "../../network" }
polkadot-primitives = { path = "../../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-runtime-common = { path = "../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-test-runtime = { path = "../../runtime/test-runtime" }

# Substrate dependencies
authority-discovery = { package = "sc-authority-discovery", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
babe = { package = "sc-consensus-babe", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
babe-primitives = { package = "sp-consensus-babe", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
consensus_common = { package = "sp-consensus", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
frame-benchmarking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
frame-system = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
grandpa = { package = "sc-finality-grandpa", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
inherents = { package = "sp-inherents", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
pallet-staking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
pallet-transaction-payment = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-chain-spec = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-executor = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-informant = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-network = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-transaction-pool = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
service = { package = "sc-service", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-arithmetic = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-keyring = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-state-machine = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
substrate-test-client = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }

[dev-dependencies]
pallet-balances = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
